--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Noise Fun</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Noise fun</title>
   </head>
   <body>
-    <div class="buttons">
-      <button id="dots-button">Dots</button>
-    </div>
-
-    <script lang="javascript" src="scripts/main.mjs" type="module"></script>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
