Add dot example in p5

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Noise fun</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="buttons">
+      <button id="btn-dots">Dots</button>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
