Add some simple styling

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Noise fun</title>
   </head>
   <body>
-    <div class="buttons">
-      <button id="btn-dots">Dots</button>
-    </div>
+    <main>
+      <select id="type-select">
+        <option value="dots" selected>Dots</option>
+      </select>
+    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
