Add grayscale plot, and restructure a bit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <main>
       <select id="type-select">
-        <option value="dots" selected>Dots</option>
+        <option value="grayscale" selected>Grayscale</option>
+        <option value="dots">Dots</option>
       </select>
     </main>
     <script type="module" src="/src/main.ts"></script>
