Add simple mesh render

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <select id="type-select">
         <option value="grayscale" selected>Grayscale</option>
         <option value="dots">Dots</option>
+        <option value="terrain">Terrain</option>
       </select>
     </main>
     <script type="module" src="/src/main.ts"></script>
